--- a/esercitazione 1/esercitazione 1 - Simone Iovine.tex
+++ b/esercitazione 1/esercitazione 1 - Simone Iovine.tex
@@ -31,6 +31,46 @@
 \usepackage{xstring}
 \usepackage{witharrows}
 \usepackage[scr=boondox, cal=esstix]{mathalpha}
+\usepackage{listings}
+
+% python code stuff
+
+% check this link for explanation:
+% https://www.overleaf.com/learn/latex/Code_Highlighting_with_minted
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+	backgroundcolor=\color{backcolour},   
+	commentstyle=\color{codegreen},
+	keywordstyle=\color{magenta},
+	numberstyle=\tiny\color{codegray},
+	stringstyle=\color{codepurple},
+	basicstyle=\ttfamily\footnotesize,
+	breakatwhitespace=false,         
+	breaklines=true,                 
+	captionpos=b,                    
+	keepspaces=true,                 
+	numbers=left,                    
+	numbersep=5pt,                  
+	showspaces=false,                
+	showstringspaces=false,
+	showtabs=false,                  
+	tabsize=2
+}
+
+\lstset{style=mystyle}
+
+% i don't know why this new environment doesn't work
+
+%\newcommand{\pycode}[1]{
+%	\begin{lstlisting}[language=Python]
+%		#1
+%	\end{lstlisting}
+%}
 
 % symbols definition
 
