--- a/esercitazione 1/esercitazione 1 - Simone Iovine.tex
+++ b/esercitazione 1/esercitazione 1 - Simone Iovine.tex
@@ -652,7 +652,7 @@ Ricordando che
 \begin{gather}
 	F = m \gamma^{3} a = m a' = e E \\
 	\nonumber \\
-	\operatorname{\dfrac{V}{m}} = \operatorname{\dfrac{N}{C}} = 6.2 \cdot 10^{9} \operatorname{\dfrac{GeV}{m}}
+	\operatorname{V} = 6.2 \cdot 10^{18} \operatorname{\dfrac{eV}{C}} = 6.2 \cdot 10^{9} \operatorname{\dfrac{GeV}{C}}
 \end{gather}
 
 Sostituendo i dati
